--- a/index.html
+++ b/index.html
@@ -2,377 +2,264 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blokz Reflex</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
+
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0; padding: 0;
-      background-color: #121212;
-      color: #eee;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      background-size: cover;
-      background-position: center;
-      transition: background-image 0.5s ease;
-    }
-    #app {
-      background: #1e1e1edd;
-      border-radius: 12px;
-      box-shadow: 0 0 15px #0008;
-      width: 400px;
-      max-width: 100%;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: 700;
-      font-size: 2rem;
-      color: #4caf50;
-      text-shadow: 0 0 8px #4caf50aa;
-    }
-    button {
-      background-color: #4caf50;
-      border: none;
-      border-radius: 6px;
-      color: white;
-      padding: 12px 18px;
-      margin: 8px 0;
-      font-size: 1rem;
-      cursor: pointer;
-      width: 100%;
-      transition: background-color 0.3s ease;
-      user-select: none;
-    }
-    button:hover:not(:disabled) {
-      background-color: #43a047;
-    }
-    button:disabled {
-      background-color: #888;
-      cursor: not-allowed;
-    }
-    .page {
-      display: none;
-      width: 100%;
-    }
-    .active {
-      display: block;
-    }
-    #difficulty-select button {
-      font-weight: 600;
-      font-size: 1.1rem;
-    }
-    #stats {
-      width: 100%;
-      margin-bottom: 15px;
-      font-size: 1.1rem;
-    }
-    #stats div {
-      margin: 5px 0;
-    }
-    #boutique {
-      background: #2c2c2c;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    #boutique h2 {
-      margin-top: 0;
-      color: #a5d6a7;
-      text-align: center;
-      text-shadow: 0 0 5px #a5d6a7aa;
-    }
-    #fond-container {
-      background: #2c2c2c;
-      padding: 15px;
-      border-radius: 8px;
-      text-align: center;
-      margin-top: 10px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    #inputBg {
-      display: none;
-    }
-    #gameplay-area {
-      background: #252525;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      font-size: 1.2rem;
-      box-shadow: inset 0 0 10px #0008;
-      min-height: 150px;
-      margin-bottom: 15px;
-      color: #eee;
-      position: relative;
+      background: #121212;
+      color: #fff;
       overflow: hidden;
     }
-    .block {
-      width: 50px;
-      height: 50px;
-      margin: 5px auto;
-      border-radius: 8px;
-      cursor: pointer;
-      user-select: none;
-      transition: transform 0.15s ease;
-      box-shadow: 0 0 6px #0008;
-    }
-    .block:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 15px #4caf5088;
-    }
-    /* Couleurs blocs */
-    .color-red { background-color: #e53935; }
-    .color-green { background-color: #43a047; }
-    .color-blue { background-color: #1e88e5; }
-    .color-yellow { background-color: #fdd835; }
-    .color-gray { background-color: #666666; cursor: not-allowed; }
 
-    #message {
-      font-weight: bold;
-      margin-top: 5px;
-      min-height: 1.2em;
-      color: #ff4444;
+    .page {
+      display: none;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      padding: 2rem;
       text-align: center;
+    }
+
+    .active {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #00ffc8;
+    }
+
+    .instructions {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: auto;
+      opacity: 0.85;
+    }
+
+    .btn {
+      padding: 1rem 2rem;
+      margin-top: 1rem;
+      background: #00ffc8;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+    }
+
+    .gameplay {
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.95);
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      padding: 2rem;
+      transition: opacity 0.6s ease-in-out;
+    }
+
+    .gameplay.show {
+      display: flex;
+    }
+
+    .hud {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      font-size: 1.2rem;
+    }
+
+    .game-area {
+      flex: 1;
+      width: 100%;
+      max-width: 800px;
+      height: 100%;
+      position: relative;
+      margin: auto;
+      border: 2px solid #00ffc8;
+      border-radius: 20px;
+      overflow: hidden;
+      background: #181818;
+    }
+
+    .block {
+      width: 60px;
+      height: 60px;
+      position: absolute;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .color-red { background: #ff4d4d; }
+    .color-blue { background: #4d94ff; }
+    .color-green { background: #4dff88; }
+    .color-yellow { background: #ffff4d; }
+    .color-gray { background: #999; }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background: transparent;
+      border: 2px solid #fff;
+      padding: 0.5rem 1rem;
+      border-radius: 10px;
+      color: #fff;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="app">
+  <div id="page-home" class="page active">
+    <h1>Blokz Reflex</h1>
+    <div class="instructions">
+      Clique uniquement sur les blocs colorés pour gagner des 🏆.<br/>
+      ⚠️ Ne clique jamais sur les blocs gris.<br/>
+      Si tu rates un bloc coloré, tu perds une vie. Le jeu devient plus rapide en fonction de la difficulté choisie.
+    </div>
+    <div>
+      <button class="btn" data-difficulty="easy">Facile</button>
+      <button class="btn" data-difficulty="medium">Moyen</button>
+      <button class="btn" data-difficulty="impossible">Impossible</button>
+    </div>
+  </div>
 
-    <!-- PAGE ACCUEIL -->
-    <section id="page-home" class="page active">
-      <h1>Blokz Reflex</h1>
-      <h3>Choisis ta difficulté</h3>
-      <div id="difficulty-select">
-        <button data-difficulty="easy">Facile (3s blocs, 2 vies)</button>
-        <button data-difficulty="medium">Moyen (1.5s blocs, 1 vie)</button>
-        <button data-difficulty="hard">Impossible (0.8s blocs, 1 vie)</button>
-      </div>
-    </section>
-
-    <!-- PAGE JEU -->
-    <section id="page-game" class="page">
-      <h1>Blokz Reflex - Jeu</h1>
-
-      <div id="stats">
-        <div>Vies : <span id="lives">3</span></div>
-        <div>Trophées : <span id="trophies">0</span></div>
-      </div>
-
-      <div id="gameplay-area">
-        <!-- Les blocs apparaîtront ici -->
-      </div>
-
-      <div id="message"></div>
-
-      <div id="boutique">
-        <h2>Boutique</h2>
-        <button id="buyLifeBtn">Acheter vie (5 trophées)</button>
-        <button id="buyMultiplierBtn">Acheter multiplicateur x2 (10 trophées)</button>
-      </div>
-
-      <div id="fond-container">
-        <h2>Changer le fond</h2>
-        <button id="btnChangeBg">Choisir une image</button>
-        <input type="file" id="inputBg" accept="image/*" />
-      </div>
-
-      <button id="btnQuit">Quitter la partie</button>
-    </section>
+  <div id="page-game" class="gameplay">
+    <button class="back-btn" id="btnBack">Retour</button>
+    <div class="hud">
+      <div>Vies : <span id="lives">3</span></div>
+      <div>Trophées : <span id="trophies">0</span></div>
+    </div>
+    <div class="game-area" id="gameArea"></div>
   </div>
 
   <script>
-    // Variables DOM
     const pageHome = document.getElementById('page-home');
     const pageGame = document.getElementById('page-game');
-
+    const gameArea = document.getElementById('gameArea');
     const livesSpan = document.getElementById('lives');
     const trophiesSpan = document.getElementById('trophies');
-    const gameplayArea = document.getElementById('gameplay-area');
-    const messageDiv = document.getElementById('message');
+    const btnBack = document.getElementById('btnBack');
 
-    const buyLifeBtn = document.getElementById('buyLifeBtn');
-    const buyMultiplierBtn = document.getElementById('buyMultiplierBtn');
-
-    const btnChangeBg = document.getElementById('btnChangeBg');
-    const inputBg = document.getElementById('inputBg');
-
-    const btnQuit = document.getElementById('btnQuit');
-
-    // Variables jeu
-    let lives = 0;
+    const colors = ['color-red', 'color-blue', 'color-green', 'color-yellow'];
+    const gray = 'color-gray';
+    let blockTime = 1000;
+    let lives = 3;
     let trophies = 0;
-    let multiplier = 1;
-    let difficulty = null;
-    let blockTime = 3000; // Durée bloc par défaut
-    let blockTimer = null;
     let currentBlock = null;
+    let blockTimer = null;
     let gameRunning = false;
 
-    // Couleurs de blocs possibles (gris = piège)
-    const colors = ['color-red', 'color-green', 'color-blue', 'color-yellow'];
-    const gray = 'color-gray';
-
-    // Paramètres difficulté
     const difficultySettings = {
-      easy: { blockTime: 3000, lives: 2 },
+      easy: { blockTime: 3000, lives: 3 },
       medium: { blockTime: 1500, lives: 1 },
-      hard: { blockTime: 800, lives: 1 },
+      impossible: { blockTime: 800, lives: 1 }
     };
 
-    // Sauvegarde localStorage
-    function saveData() {
-      localStorage.setItem('blokzLives', lives);
-      localStorage.setItem('blokzTrophies', trophies);
-      localStorage.setItem('blokzMultiplier', multiplier);
-      localStorage.setItem('blokzDifficulty', difficulty);
+    function switchToGame() {
+      pageHome.classList.remove('active');
+      pageGame.classList.add('show');
     }
-    // Chargement localStorage
-    function loadData() {
-      difficulty = localStorage.getItem('blokzDifficulty');
-      if (!difficultySettings[difficulty]) difficulty = null;
 
-      lives = parseInt(localStorage.getItem('blokzLives'));
-      trophies = parseInt(localStorage.getItem('blokzTrophies'));
-      multiplier = parseInt(localStorage.getItem('blokzMultiplier'));
+    function switchToHome() {
+      gameRunning = false;
+      clearTimeout(blockTimer);
+      pageGame.classList.remove('show');
+      pageHome.classList.add('active');
+    }
 
-      if (isNaN(lives) || lives < 1) lives = difficulty ? difficultySettings[difficulty].lives : 2;
-     if (isNaN(trophies)) trophies = 0;
-if (isNaN(multiplier) || multiplier < 1) multiplier = 1;
-}function updateUI() {
-  livesSpan.textContent = lives;
-  trophiesSpan.textContent = trophies;
-  saveData();
-}
+    function spawnBlock() {
+      if (!gameRunning) return;
 
-function startGame(selectedDifficulty) {
-  difficulty = selectedDifficulty;
-  blockTime = difficultySettings[difficulty].blockTime;
-  lives = difficultySettings[difficulty].lives;
-  trophies = 0;
-  multiplier = 1;
-  gameRunning = true;
+      gameArea.innerHTML = '';
+      const block = document.createElement('div');
+      const isGray = Math.random() < 0.2;
+      const colorClass = isGray ? gray : colors[Math.floor(Math.random() * colors.length)];
+      block.className = `block ${colorClass}`;
 
-  switchPage('page-game');
-  updateUI();
-  spawnBlock();
-}
+      // Position aléatoire dans la gameArea
+      const areaRect = gameArea.getBoundingClientRect();
+      const size = 60;
+      const x = Math.random() * (gameArea.clientWidth - size);
+      const y = Math.random() * (gameArea.clientHeight - size);
+      block.style.left = `${x}px`;
+      block.style.top = `${y}px`;
 
-function switchPage(pageId) {
-  document.querySelectorAll('.page').forEach(page => page.classList.remove('active'));
-  document.getElementById(pageId).classList.add('active');
-}
+      gameArea.appendChild(block);
+      currentBlock = block;
 
-function spawnBlock() {
-  if (!gameRunning) return;
+      block.addEventListener('click', () => {
+        if (!gameRunning) return;
+        if (block.classList.contains('color-gray')) {
+          endGame("Tu as cliqué un bloc gris !");
+        } else {
+          trophies++;
+          updateUI();
+        }
+        clearTimeout(blockTimer);
+        spawnBlock();
+      });
 
-  gameplayArea.innerHTML = '';
-  messageDiv.textContent = '';
-  const block = document.createElement('div');
-  const isGray = Math.random() < 0.2;
-  const colorClass = isGray ? gray : colors[Math.floor(Math.random() * colors.length)];
-  block.className = `block ${colorClass}`;
-  gameplayArea.appendChild(block);
-  currentBlock = block;
+      blockTimer = setTimeout(() => {
+        if (!isGray) {
+          lives--;
+          updateUI();
+          if (lives <= 0) return endGame("Tu as raté trop de blocs !");
+        }
+        spawnBlock();
+      }, blockTime);
+    }
 
-  block.addEventListener('click', () => {
-    if (!gameRunning) return;
+    function updateUI() {
+      livesSpan.textContent = lives;
+      trophiesSpan.textContent = trophies;
+    }
 
-    if (block.classList.contains('color-gray')) {
-      endGame('Tu as cliqué un bloc gris !');
-    } else {
-      trophies += 1 * multiplier;
+    function startGame(difficulty) {
+      const settings = difficultySettings[difficulty];
+      blockTime = settings.blockTime;
+      lives = settings.lives;
+      trophies = 0;
+      gameRunning = true;
       updateUI();
+      switchToGame();
+      spawnBlock();
     }
 
-    clearTimeout(blockTimer);
-    spawnBlock();
-  });
-
-  blockTimer = setTimeout(() => {
-    if (!isGray) {
-      lives--;
-      updateUI();
-      if (lives <= 0) return endGame("Tu as raté trop de blocs !");
+    function endGame(reason) {
+      gameRunning = false;
+      alert("Game Over ! " + reason);
+      switchToHome();
     }
-    spawnBlock();
-  }, blockTime);
-}
 
-function endGame(reason) {
-  gameRunning = false;
-  alert("Game Over ! " + reason);
-  switchPage('page-home');
-}
+    document.querySelectorAll('.btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const diff = btn.dataset.difficulty;
+        startGame(diff);
+      });
+    });
 
-// BOUTIQUE
-buyLifeBtn.addEventListener('click', () => {
-  if (trophies >= 5) {
-    trophies -= 5;
-    lives++;
-    updateUI();
-  }
-});
-buyMultiplierBtn.addEventListener('click', () => {
-  if (trophies >= 10) {
-    trophies -= 10;
-    multiplier = 2;
-    updateUI();
-  }
-});
+    btnBack.addEventListener('click', switchToHome);
+  </script>
+</body>
+</html>
+>
 
-// CHOIX DIFFICULTÉ
-document.querySelectorAll('#difficulty-select button').forEach(btn => {
-  btn.addEventListener('click', () => {
-    const diff = btn.dataset.difficulty;
-    startGame(diff);
-  });
-});
-
-// CHANGER FOND
-btnChangeBg.addEventListener('click', () => inputBg.click());
-inputBg.addEventListener('change', (e) => {
-  const file = e.target.files[0];
-  if (file && file.type.startsWith('image/')) {
-    const reader = new FileReader();
-    reader.onload = event => {
-      const imageDataUrl = event.target.result;
-      document.body.style.backgroundImage = `url(${imageDataUrl})`;
-      localStorage.setItem('blokzBg', imageDataUrl);
-    };
-    reader.readAsDataURL(file);
-  }
-});
-
-// Charger fond personnalisé
-(function loadBackground() {
-  const bg = localStorage.getItem('blokzBg');
-  if (bg) {
-    document.body.style.backgroundImage = `url(${bg})`;
-  }
-})();
-
-// Quitter le jeu
-btnQuit.addEventListener('click', () => {
-  gameRunning = false;
-  clearTimeout(blockTimer);
-  switchPage('page-home');
-});
-
-// Initialisation
-loadData();
-updateUI();
-</script> </body> </html> 
 
 
 
