--- a/index.html
+++ b/index.html
@@ -2,99 +2,64 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blokz Reflex</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
+      font-family: 'Segoe UI', sans-serif;
     }
 
     body {
-      background: #121212;
-      color: #fff;
+      background: linear-gradient(to bottom right, #1f1f1f, #000);
+      color: white;
       overflow: hidden;
     }
 
     .page {
       display: none;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       padding: 2rem;
       text-align: center;
+      height: 100vh;
     }
 
     .active {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      justify-content: center;
+      align-items: center;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       color: #00ffc8;
     }
 
-    .instructions {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: auto;
-      opacity: 0.85;
-    }
-
     .btn {
+      margin: 1rem;
       padding: 1rem 2rem;
-      margin-top: 1rem;
+      font-size: 1.2rem;
       background: #00ffc8;
       border: none;
-      border-radius: 12px;
-      font-size: 1.2rem;
+      border-radius: 10px;
       cursor: pointer;
-      transition: transform 0.2s;
     }
 
     .btn:hover {
-      transform: scale(1.05);
+      background: #00ccaa;
     }
 
-    .gameplay {
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.95);
-      display: none;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      position: relative;
-      padding: 2rem;
-      transition: opacity 0.6s ease-in-out;
-    }
-
-    .gameplay.show {
-      display: flex;
-    }
-
-    .hud {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      font-size: 1.2rem;
-    }
-
-    .game-area {
-      flex: 1;
+    #gameArea {
       width: 100%;
       max-width: 800px;
-      height: 100%;
-      position: relative;
-      margin: auto;
+      height: 80vh;
       border: 2px solid #00ffc8;
+      margin: auto;
+      position: relative;
+      background: #111;
       border-radius: 20px;
       overflow: hidden;
-      background: #181818;
     }
 
     .block {
@@ -105,161 +70,233 @@
       cursor: pointer;
     }
 
-    .color-red { background: #ff4d4d; }
-    .color-blue { background: #4d94ff; }
-    .color-green { background: #4dff88; }
-    .color-yellow { background: #ffff4d; }
-    .color-gray { background: #999; }
+    .gray { background: gray; }
+    .red { background: #ff4d4d; }
+    .blue { background: #4d94ff; }
+    .green { background: #4dff88; }
+    .yellow { background: #ffff4d; }
 
-    .back-btn {
+    .hud {
+      display: flex;
+      justify-content: space-between;
+      width: 90%;
+      margin: 1rem auto;
+      font-size: 1.2rem;
+    }
+
+    .topbar {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: 1rem;
+      right: 1rem;
+    }
+
+    .link-btn {
+      margin-left: 1rem;
       background: transparent;
-      border: 2px solid #fff;
+      border: 1px solid #00ffc8;
+      color: #00ffc8;
       padding: 0.5rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .store-item {
+      background: #222;
+      padding: 1rem;
+      margin: 1rem;
       border-radius: 10px;
-      color: #fff;
+      border: 1px solid #444;
+    }
+
+    .store-item h3 {
+      margin-bottom: 0.5rem;
+    }
+
+    .store-item button {
+      background: #00ffc8;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div id="page-home" class="page active">
+  <!-- ACCUEIL -->
+  <div id="home" class="page active">
     <h1>Blokz Reflex</h1>
-    <div class="instructions">
-      Clique uniquement sur les blocs colorés pour gagner des 🏆.<br/>
-      ⚠️ Ne clique jamais sur les blocs gris.<br/>
-      Si tu rates un bloc coloré, tu perds une vie. Le jeu devient plus rapide en fonction de la difficulté choisie.
-    </div>
-    <div>
-      <button class="btn" data-difficulty="easy">Facile</button>
-      <button class="btn" data-difficulty="medium">Moyen</button>
-      <button class="btn" data-difficulty="impossible">Impossible</button>
+    <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
+    <p>❌ Évite les blocs gris. Rater un bloc coloré = -1 ❤️</p>
+    <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
+    <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
+    <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
+    <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
+    <div class="topbar">
+      <button class="link-btn" onclick="showPage('shop')">🏪 Boutique</button>
+      <button class="link-btn" onclick="showPage('profile')">👤 Profil</button>
     </div>
   </div>
 
-  <div id="page-game" class="gameplay">
-    <button class="back-btn" id="btnBack">Retour</button>
+  <!-- ÉCRAN "PRÊT ?" -->
+  <div id="ready" class="page">
+    <h1>Tu es prêt ?</h1>
+    <p>Le jeu commence dès que tu appuies sur <strong>Commencer</strong>.</p>
+    <button class="btn" onclick="startGame()">Commencer</button>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
+
+  <!-- JEU -->
+  <div id="game" class="page">
     <div class="hud">
-      <div>Vies : <span id="lives">3</span></div>
-      <div>Trophées : <span id="trophies">0</span></div>
+      <div>❤️ Vies : <span id="lives"></span></div>
+      <div>🏆 Trophées : <span id="trophies"></span></div>
+      <div>🔥 Multiplicateur : x<span id="multiplier"></span></div>
     </div>
-    <div class="game-area" id="gameArea"></div>
+    <div id="gameArea"></div>
+    <div class="topbar">
+      <button class="link-btn" onclick="endGame()">🏠 Quitter</button>
+    </div>
+  </div>
+
+  <!-- BOUTIQUE -->
+  <div id="shop" class="page">
+    <h1>Boutique 🛒</h1>
+    <div class="store-item">
+      <h3>❤️ Vie Supplémentaire — 50 🏆</h3>
+      <button onclick="buyLife()">Acheter</button>
+    </div>
+    <div class="store-item">
+      <h3>🔥 Multiplicateur x<span id="shopMultiplier"></span> → x<span id="nextMultiplier"></span> — <span id="multiplierCost"></span> 🏆</h3>
+      <button onclick="upgradeMultiplier()">Améliorer</button>
+    </div>
+    <button class="btn" onclick="showPage('home')">Retour</button>
+  </div>
+
+  <!-- PROFIL -->
+  <div id="profile" class="page">
+    <h1>Profil 👤</h1>
+    <p>🏆 Trophées : <span id="profileTrophies"></span></p>
+    <p>❤️ Vies : <span id="profileLives"></span></p>
+    <p>🔥 Multiplicateur : x<span id="profileMultiplier"></span></p>
+    <button class="btn" onclick="showPage('home')">Retour</button>
   </div>
 
   <script>
-    const pageHome = document.getElementById('page-home');
-    const pageGame = document.getElementById('page-game');
-    const gameArea = document.getElementById('gameArea');
-    const livesSpan = document.getElementById('lives');
-    const trophiesSpan = document.getElementById('trophies');
-    const btnBack = document.getElementById('btnBack');
+    const pages = ["home", "ready", "game", "shop", "profile"];
+    const colors = ['red', 'blue', 'green', 'yellow'];
+    const difficulties = { easy: 3000, medium: 1500, impossible: 800 };
+    let gameTimer, currentBlock, selectedDifficulty = "easy";
+    let trophies = parseInt(localStorage.getItem("trophies") || "0");
+    let lives = parseInt(localStorage.getItem("lives") || "3");
+    let multiplier = parseInt(localStorage.getItem("multiplier") || "1");
 
-    const colors = ['color-red', 'color-blue', 'color-green', 'color-yellow'];
-    const gray = 'color-gray';
-    let blockTime = 1000;
-    let lives = 3;
-    let trophies = 0;
-    let currentBlock = null;
-    let blockTimer = null;
-    let gameRunning = false;
-
-    const difficultySettings = {
-      easy: { blockTime: 3000, lives: 3 },
-      medium: { blockTime: 1500, lives: 1 },
-      impossible: { blockTime: 800, lives: 1 }
-    };
-
-    function switchToGame() {
-      pageHome.classList.remove('active');
-      pageGame.classList.add('show');
+    function showPage(id) {
+      pages.forEach(p => document.getElementById(p).classList.remove("active"));
+      document.getElementById(id).classList.add("active");
+      if (id === 'profile') updateProfile();
+      if (id === 'shop') updateShop();
     }
 
-    function switchToHome() {
-      gameRunning = false;
-      clearTimeout(blockTimer);
-      pageGame.classList.remove('show');
-      pageHome.classList.add('active');
+    function chooseDifficulty(diff) {
+      selectedDifficulty = diff;
+      showPage('ready');
     }
 
-    function spawnBlock() {
-      if (!gameRunning) return;
+    function updateUI() {
+      document.getElementById("lives").textContent = lives;
+      document.getElementById("trophies").textContent = trophies;
+      document.getElementById("multiplier").textContent = multiplier;
+    }
 
-      gameArea.innerHTML = '';
-      const block = document.createElement('div');
+    function spawnBlock(speed) {
+      const gameArea = document.getElementById("gameArea");
+      gameArea.innerHTML = "";
+      const block = document.createElement("div");
       const isGray = Math.random() < 0.2;
-      const colorClass = isGray ? gray : colors[Math.floor(Math.random() * colors.length)];
-      block.className = `block ${colorClass}`;
+      block.className = "block " + (isGray ? "gray" : colors[Math.floor(Math.random() * colors.length)]);
+      block.style.top = Math.random() * (gameArea.clientHeight - 60) + "px";
+      block.style.left = Math.random() * (gameArea.clientWidth - 60) + "px";
 
-      // Position aléatoire dans la gameArea
-      const areaRect = gameArea.getBoundingClientRect();
-      const size = 60;
-      const x = Math.random() * (gameArea.clientWidth - size);
-      const y = Math.random() * (gameArea.clientHeight - size);
-      block.style.left = `${x}px`;
-      block.style.top = `${y}px`;
+      block.onclick = () => {
+        if (isGray) return endGame("Tu as cliqué un bloc gris !");
+        trophies += multiplier;
+        saveState();
+        updateUI();
+        clearTimeout(gameTimer);
+        spawnBlock(speed);
+      };
 
       gameArea.appendChild(block);
       currentBlock = block;
 
-      block.addEventListener('click', () => {
-        if (!gameRunning) return;
-        if (block.classList.contains('color-gray')) {
-          endGame("Tu as cliqué un bloc gris !");
-        } else {
-          trophies++;
-          updateUI();
-        }
-        clearTimeout(blockTimer);
-        spawnBlock();
-      });
-
-      blockTimer = setTimeout(() => {
+      gameTimer = setTimeout(() => {
         if (!isGray) {
           lives--;
-          updateUI();
-          if (lives <= 0) return endGame("Tu as raté trop de blocs !");
+          if (lives <= 0) return endGame("Tu as perdu toutes tes vies !");
         }
-        spawnBlock();
-      }, blockTime);
+        updateUI();
+        spawnBlock(speed);
+      }, speed);
     }
 
-    function updateUI() {
-      livesSpan.textContent = lives;
-      trophiesSpan.textContent = trophies;
-    }
-
-    function startGame(difficulty) {
-      const settings = difficultySettings[difficulty];
-      blockTime = settings.blockTime;
-      lives = settings.lives;
-      trophies = 0;
-      gameRunning = true;
+    function startGame() {
       updateUI();
-      switchToGame();
-      spawnBlock();
+      showPage('game');
+      spawnBlock(difficulties[selectedDifficulty]);
     }
 
-    function endGame(reason) {
-      gameRunning = false;
-      alert("Game Over ! " + reason);
-      switchToHome();
+    function endGame(msg) {
+      if (msg) alert("Game Over : " + msg);
+      clearTimeout(gameTimer);
+      saveState();
+      showPage('home');
     }
 
-    document.querySelectorAll('.btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const diff = btn.dataset.difficulty;
-        startGame(diff);
-      });
-    });
+    function saveState() {
+      localStorage.setItem("trophies", trophies);
+      localStorage.setItem("lives", lives);
+      localStorage.setItem("multiplier", multiplier);
+    }
 
-    btnBack.addEventListener('click', switchToHome);
+    function updateProfile() {
+      document.getElementById("profileTrophies").textContent = trophies;
+      document.getElementById("profileLives").textContent = lives;
+      document.getElementById("profileMultiplier").textContent = multiplier;
+    }
+
+    function updateShop() {
+      const nextMult = multiplier + 1;
+      const cost = nextMult * nextMult * 50;
+      document.getElementById("shopMultiplier").textContent = multiplier;
+      document.getElementById("nextMultiplier").textContent = nextMult;
+      document.getElementById("multiplierCost").textContent = cost;
+    }
+
+    function buyLife() {
+      if (trophies >= 50) {
+        trophies -= 50;
+        lives++;
+        saveState();
+        alert("❤️ +1 vie !");
+      } else alert("Pas assez de trophées !");
+    }
+
+    function upgradeMultiplier() {
+      const nextMult = multiplier + 1;
+      const cost = nextMult * nextMult * 50;
+      if (trophies >= cost) {
+        trophies -= cost;
+        multiplier = nextMult;
+        saveState();
+        alert("🔥 Multiplicateur augmenté !");
+        updateShop();
+      } else alert("Pas assez de trophées !");
+    }
+
+    updateUI();
   </script>
 </body>
 </html>
->
-
 
 
 
