--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Blokz Reflex - Pro</title>
+<title>Blokz Reflex - Pro avec compteur en jeu</title>
 <style>
-  /* Base */
   body, html {
     margin: 0; padding: 0; height: 100%;
     font-family: Arial, sans-serif;
@@ -57,7 +56,7 @@
   #btnCommencer {
     display: none;
   }
-  #changerFondBtn, #ouvrirPersonnalisationBtn {
+  #changerFondBtn {
     position: fixed;
     bottom: 15px;
     left: 15px;
@@ -66,77 +65,35 @@
     padding: 8px 15px;
     box-shadow: 0 0 10px #0af;
   }
-  #ouvrirPersonnalisationBtn {
-    left: auto;
-    right: 15px;
-  }
-  /* Fenêtre personnalisation fond */
-  #fenetreFond {
-    display: none;
+  /* Compteur en jeu en haut à droite */
+  #compteurJeu {
     position: fixed;
-    bottom: 70px;
+    top: 10px;
     right: 15px;
-    background: rgba(0,0,0,0.9);
-    border: 2px solid #0af;
-    border-radius: 8px;
-    padding: 15px;
-    width: 220px;
+    font-size: 1.6em;
+    color: #0af;
+    font-weight: bold;
     z-index: 20;
+    text-shadow: 0 0 8px #0af;
   }
-  #fenetreFond h3 {
-    margin-top: 0;
-    font-size: 1.2em;
-    text-align: center;
-  }
-  .fondOption {
+  /* Bloc simulé à cliquer pour test */
+  #blocTest {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    background: #0af;
+    border-radius: 15px;
     cursor: pointer;
-    margin: 8px 0;
-    border-radius: 6px;
-    overflow: hidden;
-    border: 2px solid transparent;
-    transition: border-color 0.3s;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 15px #08c;
+    z-index: 15;
+    display: none; /* caché avant le jeu */
+    user-select: none;
   }
-  .fondOption:hover, .fondOption.selected {
-    border-color: #0af;
-  }
-  .fondThumb {
-    width: 100%;
-    height: 60px;
-    background-size: cover;
-    background-position: center;
-  }
-  /* Responsive mobile */
-  @media(max-width: 500px) {
-    #interface {
-      margin: 15px 10px;
-      padding: 15px;
-      max-width: 100%;
-    }
-    #instructions {
-      font-size: 1.3em;
-    }
-    #compteurPoints {
-      font-size: 1.5em;
-    }
-    button {
-      font-size: 1.4em;
-      padding: 14px 25px;
-      margin: 12px 6px;
-    }
-    #changerFondBtn, #ouvrirPersonnalisationBtn {
-      font-size: 1.1em;
-      padding: 10px 18px;
-      bottom: 10px;
-    }
-    #fenetreFond {
-      width: 90vw;
-      right: 5vw;
-      bottom: 70px;
-      padding: 20px;
-    }
-    .fondThumb {
-      height: 80px;
-    }
+  #blocTest:hover {
+    background: #08c;
   }
 </style>
 </head>
@@ -151,7 +108,7 @@
       <li>Clique sur "Prêt ?" pour lancer le compte à rebours.</li>
       <li>Après le compte à rebours, clique sur "Commencer" pour démarrer la partie.</li>
       <li>Essaie de cliquer sur les bons blocs avant qu'ils disparaissent !</li>
-      <li>Personnalise ton fond d’écran gratuitement.</li>
+      <li>Change le fond d'écran gratuit avec le bouton en bas à gauche.</li>
     </ul>
   </div>
 
@@ -163,27 +120,21 @@
   </div>
 </div>
 
-<button id="changerFondBtn" style="display:none;">Changer fond perso gratuit</button>
-<button id="ouvrirPersonnalisationBtn">Personnaliser fond d’écran</button>
+<button id="changerFondBtn">Changer fond perso gratuit</button>
 
-<div id="fenetreFond">
-  <h3>Choisis ton fond</h3>
-  <div class="fondOption" data-index="0">
-    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80')"></div>
-  </div>
-  <div class="fondOption" data-index="1">
-    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1518837695005-2083093ee35b?auto=format&fit=crop&w=1350&q=80')"></div>
-  </div>
-  <div class="fondOption" data-index="2">
-    <div class="fondThumb" style="background-image:url('https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1350&q=80')"></div>
-  </div>
-</div>
+<!-- Compteur en jeu -->
+<div id="compteurJeu">Score : 0</div>
+
+<!-- Bloc simulé (à cliquer pour tester l'ajout de points) -->
+<div id="blocTest" title="Clique moi !"></div>
 
 <script>
+  // Variables
   let points = 0;
   let jeuEnCours = false;
   let tempsBloc = 3000; // facile = 3s par défaut
 
+  // Fonds perso gratuits (URLs images)
   const fondsPersoGratuits = [
     'url("https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80")',
     'url("https://images.unsplash.com/photo-1518837695005-2083093ee35b?auto=format&fit=crop&w=1350&q=80")',
@@ -191,25 +142,38 @@
   ];
   let fondActuelIndex = 0;
 
+  // Éléments DOM
   const compteurPoints = document.getElementById('compteurPoints');
   const btnPret = document.getElementById('btnPret');
   const btnCommencer = document.getElementById('btnCommencer');
   const fondJeu = document.getElementById('fondJeu');
-  const ouvrirPersonnalisationBtn = document.getElementById('ouvrirPersonnalisationBtn');
-  const fenetreFond = document.getElementById('fenetreFond');
-  const fondOptions = document.querySelectorAll('.fondOption');
+  const changerFondBtn = document.getElementById('changerFondBtn');
+  const compteurJeu = document.getElementById('compteurJeu');
+  const blocTest = document.getElementById('blocTest');
 
+  // Mise à jour des points (interface boutique / avant jeu)
   function majPoints() {
     compteurPoints.textContent = `🏆 Trophées : ${points}`;
   }
 
+  // Mise à jour compteur en jeu (visible pendant la partie)
+  function majCompteurJeu() {
+    compteurJeu.textContent = `Score : ${points}`;
+  }
+
+  // Appliquer fond perso
   function appliquerFond(index) {
     fondJeu.style.backgroundImage = fondsPersoGratuits[index];
     fondActuelIndex = index;
-    fondOptions.forEach(el => el.classList.remove('selected'));
-    fondOptions[index].classList.add('selected');
   }
 
+  // Changer fond
+  function changerFondSuivant() {
+    fondActuelIndex = (fondActuelIndex + 1) % fondsPersoGratuits.length;
+    appliquerFond(fondActuelIndex);
+  }
+
+  // Compte à rebours 3-2-1 (affichage sur bouton Commencer)
   async function compteRebours() {
     btnPret.style.display = 'none';
     btnCommencer.style.display = 'inline-block';
@@ -221,41 +185,52 @@
     btnCommencer.textContent = 'Commencer !';
   }
 
+  // Fonction appelée quand on clique sur un bloc valide (exemple)
+  function ajouterPoint() {
+    if(!jeuEnCours) return;
+    points++;
+    majPoints();
+    majCompteurJeu();
+  }
+
+  // Démarrer jeu
   function demarrerJeu() {
     jeuEnCours = true;
     points = 0;
     majPoints();
+    majCompteurJeu();
     btnCommencer.style.display = 'none';
-    alert('Ici démarre ta logique de jeu avec tempsBloc = ' + tempsBloc + ' ms');
+    // Affiche blocTest (simule un bloc à cliquer)
+    blocTest.style.display = 'block';
   }
 
+  // Événements
   btnPret.addEventListener('click', compteRebours);
   btnCommencer.addEventListener('click', demarrerJeu);
+  changerFondBtn.addEventListener('click', changerFondSuivant);
 
-  ouvrirPersonnalisationBtn.addEventListener('click', () => {
-    if(fenetreFond.style.display === 'block') {
-      fenetreFond.style.display = 'none';
-    } else {
-      fenetreFond.style.display = 'block';
-    }
+  // Clique sur bloc test => ajoute un point
+  blocTest.addEventListener('click', () => {
+    ajouterPoint();
   });
 
-  fondOptions.forEach(option => {
-    option.addEventListener('click', () => {
-      let index = parseInt(option.getAttribute('data-index'));
-      appliquerFond(index);
-      fenetreFond.style.display = 'none';
-    });
-  });
-
+  // Initialisation
   window.addEventListener('load', () => {
     majPoints();
     appliquerFond(fondActuelIndex);
+    compteurJeu.style.display = 'none'; // caché au départ
   });
+
+  // Affiche le compteur en jeu au démarrage de la partie
+  btnCommencer.addEventListener('click', () => {
+    compteurJeu.style.display = 'block';
+  });
+
 </script>
 
 </body>
 </html>
+
 
 
 
